--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "signature_pad": "^5.1.3",
     "yup": "^1.7.1",
     "zustand": "^5.0.10"
   },
